--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@ h2 {
 }
 body {
   background: #b4846c;
-  height: 2300px;
+  height: 2500px;
   display: flexbox;
 }
 .smalh1 {
@@ -144,5 +144,21 @@ body {
   text-align: center;
 }
 #download {
-  padding: 2px;
+  padding: 2%;
+  margin: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .card1,
+  .card2,
+  .card3,
+  .card4,
+  .card5,
+  .card6,
+  .card7,
+  .card8,
+  .card9 {
+    display: flex;
+    flex-direction: column;
+  }
 }
